# ReausoKit

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: PyPiRelease.yml  Testing.yml
multithreading/: ProcessorInteractor.py
rkit/: list.py  string.py
rkit/bitwise/: BitArray.py
rkit/decorators/: __init__.py  indexableproperty.py
rkit/design_patterns/: __init__.py  observer.py  singleton.py
rkit/io/: io_util.py
rkit/multitasking/: __init__.py  multitasking.py
rkit/patterns/: __init__.py  observer.py  singleton.py
rkit/time/: __init__.py  base.py  measuring.py
rkit/unittesting/: __init__.py
rkitTests/: Default_test.py  list_test.py  string_test.py
rkitTests/bitwise/: BitArrayTest.py  BitArray_test.py  BitArray_test_data.py
rkitTests/decorators/: indexableproperty_test.py
rkitTests/design_patterns/: observer_test.py  singleton_test.py
rkitTests/io/: io_util_test.py
rkitTests/multitasking/: multitasking_test.py
rkitTests/patterns/: observer_test.py  singleton_test.py
