[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rkit/"]

[project]
name = "ReausoKit"
version = "0.0.2"
description = "Some util functionality for Python Projects."
authors = [
    { name = "Rene Ebertowski", email = "r.ebertowski@gmx.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy"
]

[project.urls]
Homepage = "https://github.com/reauso/ReausoKit"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
pixi-pycharm = "*"
[tool.pixi.pypi-dependencies]
build = "*"

[tool.pixi.tasks]
build = "python -m build"

[tool.pixi.environments]
test = ["test"]

[tool.pixi.feature.test.dependencies]
pytest = "*"
coverage = "*"
parameterized = "*"

[tool.pixi.feature.test.tasks]
test = "coverage run -m pytest"
coverage = { cmd = [
    "coverage", "report",
    "&&", "coverage", "html"
], depends-on = ["test"] }
